# CC

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libcarboncoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
contrib/: README.md  carboncoin-cli.bash-completion  carboncoin-tx.bash-completion  carboncoind.bash-completion  gitian-build.sh  tidy_datadir.sh
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  carboncoin-cli-res.rc  carboncoin-cli.cpp  carboncoin-tx.cpp  carboncoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  (+95 more)
src/bench/: Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_carboncoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_sanity.cpp  glibcxx_sanity.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.h
src/crypto/ctaes/: README.md
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  callback.h  carboncoin.cpp  carboncoin.qrc  carboncoin_locale.qrc  carboncoingui.cpp  carboncoingui.h  carboncoinstrings.cpp  carboncoinunits.cpp  carboncoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macnotificationhandler.h  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  notificator.cpp  openuridialog.cpp  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  (+50 more)
src/qt/forms/: coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  sendcoinsdialog.ui
src/qt/locale/: carboncoin_af.ts  carboncoin_af_ZA.ts  carboncoin_ar.ts  carboncoin_be_BY.ts  carboncoin_bg.ts  carboncoin_bg_BG.ts  carboncoin_bn.ts  carboncoin_bs.ts  carboncoin_ca.ts  carboncoin_ca@valencia.ts  carboncoin_ca_ES.ts  carboncoin_cs.ts  carboncoin_cy.ts  carboncoin_da.ts  carboncoin_de.ts  carboncoin_de_DE.ts  carboncoin_el.ts  carboncoin_el_GR.ts  carboncoin_en.ts  carboncoin_en_AU.ts  carboncoin_en_GB.ts  carboncoin_en_US.ts  carboncoin_eo.ts  carboncoin_es.ts  carboncoin_es_419.ts  carboncoin_es_AR.ts  carboncoin_es_CL.ts  carboncoin_es_CO.ts  carboncoin_es_DO.ts  carboncoin_es_ES.ts  carboncoin_es_MX.ts  carboncoin_es_UY.ts  carboncoin_es_VE.ts  carboncoin_et.ts  carboncoin_et_EE.ts  carboncoin_eu_ES.ts  carboncoin_fa.ts  carboncoin_fa_IR.ts  carboncoin_fi.ts  carboncoin_fr.ts  (+61 more)
src/qt/res/: carboncoin-qt-res.rc
src/qt/res/movies/: makespinner.sh
src/qt/test/: compattests.cpp  compattests.h  paymentservertests.cpp  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: carboncoinconsensus.cpp  carboncoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_carboncoin_NativeSecp256k1.c  org_carboncoin_NativeSecp256k1.h  org_carboncoin_Secp256k1Context.c  org_carboncoin_Secp256k1Context.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java  Secp256k1Context.java
src/secp256k1/src/java/org/carboncoin/: NativeSecp256k1Test.java  NativeSecp256k1Util.java
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base58_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_standard_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  (+17 more)
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp
src/wallet/: coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: accounting_tests.cpp  crypto_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+221 files in other folders)
